<resources>
    <string name="app_name">FastQ</string>
    <!-- Login screen -->
    <string name="email">Email</string>
    <string name="pinPrompt">6-digit PIN</string>
    <string name="sign_up">OPEN AN ACCOUNT</string>
    <string name="sign_in">LOGIN</string>
    <string name="no_such_user">No such user</string>
    <string name="wrong_pin">Wrong PIN</string>

    <!--Feed screen-->
    <string name="feed_title">Welcome</string>

    <!--View Store screen-->
    <string name="currency">S$</string>
    <string name="queueing_msg">queueing</string>
    <string name="queueBtn_msg">Queue</string>
    <string name="sample_sum">3.50</string>
    <string name="sample_queuing_number">8</string>



    <!--testRecycler-->
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>
    <string name="edit">Edit</string>
    <string name="sample_username">Enna</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="profile_title">Profile</string>
    <string name="notification_title">Notifications</string>
    <string name="no_content">No data retrieved</string>
    <string name="loading_store_list">Retrieving store list</string>
    <string name="store_clicked">Store clicked</string>
</resources>
